--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
+    "express-session": "^1.13.0",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
+    "passport": "^0.3.2",
+    "passport-windowslive": "^1.0.1",
+    "serve-favicon": "~2.2.0",
+    "uuid": "^2.0.1"
   }
 }
