--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.5",
     "body-parser": "~1.12.0",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
@@ -14,6 +15,7 @@
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
     "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "passport-windowslive": "^1.0.1",
     "serve-favicon": "~2.2.0",
     "uuid": "^2.0.1"
