--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "npm run styles -s && nodemon ./bin/www",
+    "styles": "echo 'copying bootstrap' && cp node_modules/bootstrap/dist/css/bootstrap.min.css public/stylesheets"
   },
   "dependencies": {
     "body-parser": "~1.12.0",
+    "bootstrap": "^3.3.6",
     "cookie-parser": "~1.3.4",
     "debug": "~2.1.1",
     "express": "~4.12.2",
