--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "express-session": "^1.13.0",
+    "gulp": "^3.9.0",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
     "passport": "^0.3.2",
@@ -21,5 +22,9 @@
     "passport-windowslive": "^1.0.1",
     "serve-favicon": "~2.2.0",
     "uuid": "^2.0.1"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.11.1",
+    "gulp-nodemon": "^2.0.6"
   }
 }
