--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.1.1",
     "express": "~4.12.2",
     "express-session": "^1.13.0",
+    "font-awesome": "^4.5.0",
     "gulp": "^3.9.0",
     "jade": "~1.9.2",
     "morgan": "~1.5.1",
